css overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,17 @@
+html {
+    overflow: hidden;
+    height: 100%;
+}
+
 body {
     text-align: center;
     background-color: rgb(67, 80, 82);
     font-family: 'Roboto Mono', monospace;
     padding: 0px;
     margin: 0px;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
 }
 
 #wrapper {
@@ -48,6 +56,7 @@ button {
 
 .searchLabel {
     margin: 4px;
+    max-width: 100%;
 }
 
 .formSelect {
@@ -110,6 +119,11 @@ footer p a {
     margin: 16px;
     border-radius: 6px;
     padding: 10px;
+}
+
+.search select {
+    margin-top: 14px;
+    width: 100%;
 }
 
 nav {
